[gd_scene load_steps=5 format=3 uid="uid://c3gamesn001"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/grid_lines.gd" id="2_grid"]
[ext_resource type="Script" path="res://scripts/food_spawner.gd" id="3_food"]
[ext_resource type="Script" path="res://scripts/snake.gd" id="4_snake"]

[node name="Game" type="Node2D"]
script = ExtResource("1_game")

[node name="Background" type="ColorRect" parent="."]
offset_right = 600.0
offset_bottom = 400.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="GridLines" type="Node2D" parent="."]
script = ExtResource("2_grid")

[node name="SnakeContainer" type="Node2D" parent="."]

[node name="Snake" type="Node2D" parent="SnakeContainer"]
script = ExtResource("4_snake")

[node name="FoodContainer" type="Node2D" parent="."]

[node name="FoodSpawner" type="Node2D" parent="FoodContainer"]
script = ExtResource("3_food")

[node name="GameTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = false
